WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277251
REGRESSION (
281060@main
): [iOS] Crash when entering Japanese text into a text box
https://bugs.webkit.org/show_bug.cgi?id=277251
Summary
REGRESSION (281060@main): [iOS] Crash when entering Japanese text into a text...
Aditya Keerthi
Reported
2024-07-29 01:53:53 PDT
rdar://132702363
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-07-29 02:01:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31381
EWS
Comment 2
2024-07-29 08:41:06 PDT
Committed
281501@main
(1b2555425144): <
https://commits.webkit.org/281501@main
> Reviewed commits have been landed. Closing PR #31381 and removing active labels.
EWS
Comment 3
2024-07-29 17:06:55 PDT
Committed
280938.152@safari-7619-branch
(255ac8cc1749): <
https://commits.webkit.org/280938.152@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1517 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug